Fix for alignment of length of select elements in the filter component (#134)

--- a/assets/scss/overrides/_local.scss
+++ b/assets/scss/overrides/_local.scss
@@ -27,3 +27,9 @@
     }
   }
 }
+
+.moj-filter__content {
+  .govuk-select {
+    width: 100%;
+  }
+}
